# wxDateFrom

./: README.md  background.xpm  meson.build  org.altervista.numerone.wxdatefrom.yml  wxDateFrom.desktop  wxDateFromApp.cpp  wxDateFromApp.h  wxDateFromMain.cpp  wxDateFromMain.h
debian/: README.Debian  README.source  changelog  control  copyright  debhelper-build-stamp  files  manpage.1.ex  manpage.md.ex  manpage.sgml.ex  manpage.xml.ex  metadata.ex  postinst.ex  postrm.ex  preinst.ex  prerm.ex  watch.ex  wxdatefrom.cron.d.ex  wxdatefrom.doc-base.ex  wxdatefrom.substvars
po/: LINGUAS  POTFILES  de.mo  de.po  es.mo  es.po  fr.mo  fr.po  it.mo  it.po  meson.build  pt.mo  pt.po  wxdatefrom.pot
